// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions/alerts hideAlert should return an action 1`] = `
{
  "payload": "test",
  "type": "HIDE_ALERT",
}
`;

exports[`actions/alerts showAlert should return an action with variant \`error\` 1`] = `
{
  "meta": undefined,
  "payload": {
    "icon": "dot-circle-o",
    "id": "test",
    "message": "Alright!",
    "position": "bottom-right",
    "timeout": 0,
    "variant": "danger",
  },
  "type": "SHOW_ALERT",
}
`;

exports[`actions/alerts showAlert should return an action with variant \`success\` 1`] = `
{
  "meta": undefined,
  "payload": {
    "icon": "dot-circle-o",
    "id": "test",
    "message": "Alright!",
    "position": "bottom-right",
    "timeout": 10,
    "variant": "success",
  },
  "type": "SHOW_ALERT",
}
`;
